fix links and simple homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
+  <!-- <h1 class="page-heading">Posts</h1>
   
   {{ content }}
 
@@ -20,10 +20,15 @@ layout: default
     {% endfor %}
   </ul>
 
-  <h1 class="page-heading">Pages</h1>
-
-  <a href="labMonaci">Lab Monaci</a>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+  <h1 class="page-heading">Pages</h1> -->
+  <ul>
+  	<li>
+  		<a href="talks">Talks</a>
+  	</li>
+ 	<li>
+  		<a href="https://github.com/elespdn/laboratorio-monaci">Laboratorio Monaci</a>
+  	</li>
+  </ul>
+  <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+ -->
 </div>
