--- a/io/css/my.css
+++ b/io/css/my.css
@@ -20,6 +20,10 @@
 	background-color: #97ead2;
 }
 
+.news {
+  padding: 5% 14% 0% 13%;
+}
+
 
 
 /* Sticky footer styles from Bootstrap  <http://getbootstrap.com/docs/4.1/examples/sticky-footer/>
